united-states-flag.com (archived on 2014-02-28)
{
  "alexa_rank": 264918,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 4826,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.17,
  "homepage_snapshot_redirected_domain": "united-states-flag.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140402070726id_/http://www.united-states-flag.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140402070726id_/http%3A//united-states-flag.com",
  "interval": "2014_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "united-states-flag.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140228152832id_/http%3A//www.united-states-flag.com/privacypolicy.html",
  "policy_title": "Privacy Policy",
  "policy_url": "united-states-flag.com/privacypolicy.html",
  "sha1": "e9ac22c14026981e692ec322b10c93f79ff011b3",
  "simhash": 15012484045350310366,
  "simhash_updated": true,
  "site_hostname": "united-states-flag.com",
  "site_url": "http://united-states-flag.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20140228152832",
  "word_count": 748,
  "year": 2014
}

--- a/u/un/uni/united-states-flag.com.html
+++ b/u/un/uni/united-states-flag.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the united-states-flag.com privacy policy that was archived on 2013-08-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130828013300id_/http%3A//www.united-states-flag.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the united-states-flag.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228152832id_/http%3A//www.united-states-flag.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <!--head beginning script goes here-->
@@ -36,7 +36,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/base/default/pronav/css/pronav.default.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/enterprise/default/css/downloads.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/base/default/css/mageworx/modalbox.css" media="all">
-<link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/base/default/css/addressvalidation.css" media="all">
+<link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/enterprise/default/css/addressvalidation.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/enterprise/flagstore/css/custom.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.united-states-flag.com/skin/frontend/enterprise/default/css/print.css" media="print">
 <script type="text/javascript" src="http://www.united-states-flag.com/js/prototype/prototype.js"></script>
@@ -107,7 +107,7 @@ optionalZipCountries = [];
 </script>
 <script type="text/javascript">//<![CDATA[
         var Translator = new Translate([]);
-        //]]></script><meta name="p:domain_verify" content="e8fefc37c59e12dfbfbd2aa9da352c78"><script type="text/javascript" async="" src="https://upfront.thefind.com/scripts/main/utils-init-ajaxlib/upfront-badgeinit.js">thefind.upfront.init('tf_upfront_badge', '50b2cc81108bc8f902aed011d8d8c2d4')</script><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
+        //]]></script><meta name="p:domain_verify" content="e8fefc37c59e12dfbfbd2aa9da352c78"><script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 <body class=" cms-page-view cms-privacypolicy-html">
 <!-- BEGIN GOOGLE ANALYTICS CODEs -->
 <script type="text/javascript">
@@ -215,24 +215,23 @@ _gaq.push(['_trackPageview']);
                                             <a href="http://www.united-states-flag.com/" title="US Flag Store" class="logo"><strong>US Flag Store</strong><img src="http://www.united-states-flag.com/skin/frontend/enterprise/flagstore/images/logo.gif" alt="US Flag Store"></a>
                 </div>
         <div class="right-col clearfix">
-            <div class="header-tagline"><!--{WIDGET_ENTERPRISE_BANNER_e28570684a8c8d44cc6aeedf1af82982}--><div class="header-ticker clearfix">
+            <div class="header-tagline"><!--{WIDGET_ENTERPRISE_BANNER_9298b913eb26f9e80b62692f9a025205}--><div class="header-ticker clearfix">
     <ul class="header-ticker-window">
             <li><a href="http://www.united-states-flag.com/shippinginfo.html?banner=36/"><img src="http://www.united-states-flag.com/media/wysiwyg/free-shipping-banner-small.png" alt="Limited time free shipping on orders over $75. Excludes commercial flag poles"></a>
 </li>
             <li><a href="http://www.united-states-flag.com/why-buy-from-us.html?banner=48/"><img src="http://www.united-states-flag.com/media/wysiwyg/home-banner-images/2-wemeanit_.jpg" alt="Made in USA"></a></li>
-            <li><a href="http://www.united-states-flag.com/why-buy-from-us.html?banner=47/"><img src="http://www.united-states-flag.com/media/wysiwyg/home-banner-images/Were-the-experts.jpg" alt="We're The Experts"></a></li>
             <li><a href="http://www.united-states-flag.com/why-buy-from-us.html?banner=49/"><img src="http://www.united-states-flag.com/media/wysiwyg/home-banner-images/6-Shop-with-Confidence.jpg" alt="Warranty"></a></li>
         </ul>
 </div>
-<!--/{WIDGET_ENTERPRISE_BANNER_e28570684a8c8d44cc6aeedf1af82982}--></div>
+<!--/{WIDGET_ENTERPRISE_BANNER_9298b913eb26f9e80b62692f9a025205}--></div>
             <div class="header-contact-info"><div style="float: right; margin-left: 5px; text-align: center;">
 <p>1.877.734.2458</p>
-<p style="font-family: arial,sans-serif; font-size: 10px; font-weight: normal; line-height: 8px; margin-top: 3px;">8AM-7PM EST MON-SAT.</p>
+<p style="font-family: arial,sans-serif; font-size: 10px; font-weight: normal; line-height: 8px; margin-top: 3px;">8AM-7PM EST MON-FRI</p>
+<p style="font-family: arial,sans-serif; font-size: 10px; font-weight: normal; line-height: 8px; margin-top: 3px;">10AM-7PM EST SAT</p>
 </div>
-<!--<a href="http://www.united-states-flag.com/checkout/cart/" rel="nofollow"><img src="http://www.united-states-flag.com/media/wysiwyg/HeaderImages/cart-checkout-button.png" alt="Checkout" /></a>-->
-<!-- old chat <script type="text/javascript" src="http://support.onlinestores.com/visitor/index.php?_m=livesupport&_a=htmlcode&departmentid=2"></script> -->
-<!-- Velaro call / chat Support 
-<a style="position:relative; top:8px; float:right;" href="https://service.velaro.com/visitor/requestchat.aspx?siteid=8903&showwhen=inqueue&deptid=16574" target="OnlineChatSoftware"  onClick="this.newWindow = window.open('https://service.velaro.com/visitor/requestchat.aspx?siteid=8903&showwhen=inqueue&deptid=16574', 'OnlineChatSoftware', 'toolbar=no,location=no,directories=no,menubar=no,status=no,scrollbars=no,resizable=yes,replace=no');this.newWindow.focus();this.newWindow.opener=window;return false;"><img alt="OnlineChatSoftware" src="https://service.velaro.com/visitor/check.aspx?siteid=8903&showwhen=inqueue&deptid=16574" border="0"></a> --></div>
+<div style="float: left; margin-left: 5px; text-align: center;"><a href="/returns-center.html"><img src="http://www.united-states-flag.com/media/wysiwyg/HeaderImages/Returns.gif" alt=""></a></div>
+
+</div>
             <form id="search_mini_form" action="http://www.united-states-flag.com/catalogsearch/result/" method="get">
 <div class="form-search">
 	    <label for="search">Search site:</label>
@@ -256,8 +255,7 @@ _gaq.push(['_trackPageview']);
 <!--/{WIDGET_ENTERPRISE_BANNER_a2b36004e8bd175fe09643e5c328a15b}--></div>
     </div>
     <div class="nav-container">
-    
-    <ul id="nav"><li id="" class="level0 nav-1 first parent level-top"><a href="http://www.united-states-flag.com/outdoorflags.html" id="" class="level-top"><span>American Flags</span></a><div class="sub"><div class="level0">
+    <ul id="nav"><li class="level0 nav-1 first parent level-top"><a href="http://www.united-states-flag.com/outdoorflags.html" class="level-top"><span>American Flags</span></a><div class="sub"><div class="level0">
 <div class="col2-set">
 <div class="col-1">
 <div class="col-1-inner">
@@ -405,7 +403,7 @@ _gaq.push(['_trackPageview']);
 
 </div>
 </div>
-</div></div></li><li id="" class="level0 nav-2 first parent level-top"><a href="http://www.united-states-flag.com/flags.html" id="" class="level-top"><span>Flags</span></a><div class="sub"><div class="level0">
+</div></div></li><li class="level0 nav-2 first parent level-top"><a href="http://www.united-states-flag.com/flags.html" class="level-top"><span>Flags</span></a><div class="sub"><div class="level0">
 <div class="col2-set">
 <div class="col-1">
 <div class="col-1-inner">
@@ -597,7 +595,7 @@ _gaq.push(['_trackPageview']);
 <li><a href="http://www.united-states-flag.com/brnacofl.html" rel="nofollow"> Cotton American Flags</a></li>
 <li><a href="http://www.united-states-flag.com/valley-forge-brand-koralex-ii.html" rel="nofollow">Koralex II American Flags </a></li>
 <li><a href="http://www.united-states-flag.com/stan20outfla.html" rel="nofollow">20ft  Aluminum Flagpole </a></li>
-<li><a href="http://www.united-states-flag.com/valley-forge-info.html" rel="nofollow"> Flag Company Information &amp; History </a></li>
+<li><a href="http://www.onlinestores.com/valley-forge-info.html" rel="nofollow"> Flag Company Information &amp; History </a></li>
 </ul>
 </div>
 <div id="cat2-13">
@@ -624,7 +622,7 @@ _gaq.push(['_trackPageview']);
 </div>
 </div>
 </div>
-</div></div></li><li id="" class="level0 nav-3 first parent level-top"><a href="http://www.united-states-flag.com/flagpolandki.html" id="" class="level-top"><span>Flagpoles</span></a><div class="sub"><div class="level0">
+</div></div></li><li class="level0 nav-3 first parent level-top"><a href="http://www.united-states-flag.com/flagpolandki.html" class="level-top"><span>Flagpoles</span></a><div class="sub"><div class="level0">
   <div class="col2-set">
     <div class="col-1">
       <div class="col-1-inner">
@@ -813,7 +811,7 @@ _gaq.push(['_trackPageview']);
   <!-- end div class="col2-set" --> 
   
 </div>
-<!-- end div class="level0" --></div></li><li id="" class="level0 nav-4 first parent level-top"><a href="http://www.united-states-flag.com/state.html" id="" class="level-top"><span>State Flags</span></a><div class="sub"><div class="level0">
+<!-- end div class="level0" --></div></li><li class="level0 nav-4 first parent level-top"><a href="http://www.united-states-flag.com/state.html" class="level-top"><span>State Flags</span></a><div class="sub"><div class="level0">
 <div class="col2-set">
 <div class="col-1">
 <div class="col-1-inner">
@@ -948,7 +946,7 @@ _gaq.push(['_trackPageview']);
 </div>
 </div>
 </div>
-</div></div></li><li id="" class="level0 nav-5 first parent level-top"><a href="http://www.united-states-flag.com/world.html" id="" class="level-top"><span>International Flags</span></a><div class="sub"><div class="level0">
+</div></div></li><li class="level0 nav-5 first parent level-top"><a href="http://www.united-states-flag.com/world.html" class="level-top"><span>International Flags</span></a><div class="sub"><div class="level0">
 <div class="col2-set">
 <div class="col-1">
 <div class="col-1-inner">
@@ -1078,7 +1076,7 @@ _gaq.push(['_trackPageview']);
 
 </div>
 </div>
-</div></div></li><li id="" class="level0 nav-6 first parent level-top"><a href="http://www.united-states-flag.com/displaycases.html" id="" class="level-top"><span>Display Cases</span></a><div class="sub"><div class="level0">
+</div></div></li><li class="level0 nav-6 first parent level-top"><a href="http://www.united-states-flag.com/displaycases.html" class="level-top"><span>Display Cases</span></a><div class="sub"><div class="level0">
 <div class="col2-set">
 <div class="col-1">
 <div class="col-1-inner">
@@ -1179,7 +1177,7 @@ _gaq.push(['_trackPageview']);
 </div>
 </div>
 </div>
-</div></div></li><li id="" class="level0 nav-7 last parent level-top"><a href="http://www.united-states-flag.com/flag-accessories.html" id="" class="level-top"><span>Accessories</span></a><div class="sub"><div class="level0">
+</div></div></li><li class="level0 nav-7 last parent level-top"><a href="http://www.united-states-flag.com/flag-accessories.html" class="level-top"><span>Accessories</span></a><div class="sub"><div class="level0">
 <div class="col2-set">
 <div class="col-1">
 <div class="col-1-inner">
@@ -1300,9 +1298,9 @@ _gaq.push(['_trackPageview']);
 </div>
 </div>
 </div>
-</div></div></li><div style="clear:both;"></div>    <span class="tl"></span>
+</div></div></li></ul><div style="clear:both;"></div>    <span class="tl"></span>
     <span class="tr"></span>
-    <div style="clear:both;"></div></ul>
+    <div style="clear:both;"></div>
 
     <script>
     jQuery(function() {
@@ -1493,7 +1491,7 @@ _gaq.push(['_trackPageview']);
 <a title="Order our FREE catalog!" href="http://www.united-states-flag.com/flagstore-catalog.html"><img style="float: left" src="http://www.united-states-flag.com/media/FooterLinks/catalog-cover-banner_1.jpg" alt="Order our FREE catalog!"></a>
 <a title="Download our FREE catalog for your iPad®" href="https://itunes.apple.com/us/app/united-states-flag-store-icatalog+/id569282457?mt=8" target="_blank"><img style="float: right" src="http://www.united-states-flag.com/media/FooterLinks/Download_on_the_App_Store_Badge_US-UK_135x40_0801.png" alt="Download our FREE catalog for your iPad"></a>
 <br>
-<a title="Download our FREE catalog in PDF format" href="http://www.united-states-flag.com/flagstore-catalog.html"><img style="float: right" src="http://www.united-states-flag.com/media/FooterLinks/download-catalog-pdf.jpg" alt="" download="" our="" free="" catalog!"=""></a>        </div>
+<a title="Download our FREE catalog in PDF format" href="http://www.united-states-flag.com/flagstore-catalog.html"><img style="float:right" src="http://www.united-states-flag.com/media/FooterLinks/download-catalog-pdf.jpg" alt="Download our FREE catalog!"></a>        </div>
 
         <div class="section6 clearfix">
           
@@ -1528,7 +1526,13 @@ _gaq.push(['_trackPageview']);
 
 
 <td style="vertical-align: middle;">
-<a class="tf_upfront_badge" href="http://www.thefind.com/store/about-united-states-flag" title="TheFind Upfront"><img border="0" src="//upfront.thefind.com/images/badges/s/50/b2/50b2cc81108bc8f902aed011d8d8c2d4.png" alt="United States Flag is an Upfront Merchant on TheFind. Click for info."></a>
+<!-- reseller ratings -->
+<a href="https://www.resellerratings.com" onclick="window.open('https://seals.resellerratings.com/landing.php?seller=35693','name','height=760,width=780,scrollbars=1'); 
+return false;">
+<img style="border:none;" src="//seals.resellerratings.com/seal.php?seller=35693" oncontextmenu="alert('Copying Prohibited by Law - ResellerRatings seal is a Trademark of All Enthusiast, Inc.'); return false;"></a>
+<!-- end reseller ratings -->
+
+<!-- <a class="tf_upfront_badge" href="http://www.thefind.com/store/about-united-states-flag" title="TheFind Upfront"><img  border="0" src="//upfront.thefind.com/images/badges/s/50/b2/50b2cc81108bc8f902aed011d8d8c2d4.png" alt="United States Flag is an Upfront Merchant on TheFind. Click for info."/></a>
   <script type="text/javascript">
     (function() {
       var upfront = document.createElement('SCRIPT'); upfront.type = "text/javascript"; upfront.async = true;
@@ -1536,7 +1540,10 @@ _gaq.push(['_trackPageview']);
       upfront.text = "thefind.upfront.init('tf_upfront_badge', '50b2cc81108bc8f902aed011d8d8c2d4')";
       document.getElementsByTagName('HEAD')[0].appendChild(upfront);
     })();
-  </script>
+  </script> -->
+</td>
+<td style="vertical-align: middle;">
+<a name="trustlink" href="http://secure.trust-guard.com/security/8418" rel="nofollow" target="_blank" onclick="var nonwin=navigator.appName!='Microsoft Internet Explorer'?'yes':'no'; window.open(this.href.replace(/https?/, 'https'),'welcome','location='+nonwin+',scrollbars=yes,width=517,height='+screen.availHeight+',menubar=no,toolbar=no'); return false;" oncontextmenu="var d = new Date(); alert('Copying Prohibited by Law - This image and all included logos are copyrighted by trust-guard \251 '+d.getFullYear()+'.'); return false;"><img name="trustseal" alt="Security Seals" style="border: 0;" src="//dw26xg4lubooo.cloudfront.net/seals/logo/8418-lg.gif"></a>
 </td>
 
 <td style="vertical-align: middle;"><a title="Tell us what you think" href="http://www.united-states-flag.com/flag-store-reviews.html"><img style="float: right;" src="http://www.united-states-flag.com/media/FooterLinks/submit-reviews-icon.png" alt="Tell us what you think"></a>
@@ -1554,6 +1561,9 @@ _gaq.push(['_trackPageview']);
 		+ ((document.location.protocol == "https:") ? "https:" : "http:")
 		+ "//p.bm23.com/bta.js' type='text/javascript'%3E%3C/script%3E"));
 </script><script src="https://p.bm23.com/bta.js" type="text/javascript"></script>
+<script type="text/javascript">
+	var bta = new __bta('c5536e772b3199bcae36ae90b2145146');
+</script>
 <!--{WISHLISTS_0a62920bc25654f05711578c0018ac7f}--><!--/{WISHLISTS_0a62920bc25654f05711578c0018ac7f}--><div class="widget widget-static-block"><script type="text/javascript">
 adroll_adv_id = "UNPVZSUHZVCO7BPSZPPE45";
 adroll_pix_id = "GPKN7FLLKVGPXODNEZ3H3O";
