--- a/s/sp/spo/sportscaptions.com.html
+++ b/s/sp/spo/sportscaptions.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the sportscaptions.com privacy policy that was archived on 2013-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226185937id_/http%3A//sportscaptions.com/%3Fpage_id%3D2) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the sportscaptions.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228160401id_/http%3A//www.sportscaptions.com/%3Fpage_id%3D2) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
