--- a/n/na/nam/namerific.com.html
+++ b/n/na/nam/namerific.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the namerific.com privacy policy that was archived on 2013-12-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131207024131id_/http%3A//www.namerific.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the namerific.com privacy policy that was archived on 2014-02-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140228214636id_/http%3A//www.namerific.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" dir="ltr" lang="en" xml:lang="en"><head>
 <title>Privacy Policy - Namerific</title>
@@ -254,11 +254,22 @@ DD_belatedPNG.fix('#logo img');
 	function sticky_relocate() {
       var window_top = $(window).scrollTop();
       var div_top = $('#favorites_bar-anchor').offset().top;
-      if (window_top > div_top)
-        $('#favorites-bar-cont').addClass('stick-to-top')
-      else
-        $('#favorites-bar-cont').removeClass('stick-to-top');
-     }
+		if (window_top > div_top) {
+			$('#favorites-bar-cont').addClass('stick-to-top');
+			
+			//$('#no-pinned-item').css('display','block');
+			$('#no-pinned-item').slideDown("fast");
+			$('#no-pinned-item').addClass('stick-to-top');
+		} else {
+			$('#favorites-bar-cont').removeClass('stick-to-top');			
+			
+			$('#no-pinned-item').removeClass('stick-to-top');
+			$('#no-pinned-item').css('display','none');
+			/* if ($('#no-pinned-item').css('display')=='block') {
+				$('#no-pinned-item').slideUp("fast"); 
+			}	 */		
+		}
+	 }
      $(function() {
       $(window).scroll(sticky_relocate);
       sticky_relocate();
@@ -343,12 +354,11 @@ function subsAjaxRequest() {
 
 </script>
 
-		
 <div id="favorites_bar-anchor"></div>
 <div id="favorites-bar-cont" style="background:#FFF;border-top: 1px solid #CCC;border-bottom: 1px solid #777;box-shadow: 0px 0px 5px #555;">
 <img src="/image/data/v3/favbar-star.png" alt="Faves" title="Faves" style="opacity:0;padding-left:40px;margin-top:22px;margin-right:20px;float:left;">
 	<div id="favorites_bar_outer">
-	<div style="float:left;padding-top:15px;text-align:center;color:#999;font-weight:bold;margin-right:10px;">This Is Your Pinboard<br><span style="font-size:10px;color:#AAA;">(hover over an item for more details)</span></div>
+	<div style="float:left;padding-top:15px;text-align:center;color:#999;font-weight:bold;margin-right:10px;">Your Favorites<br><span style="font-size:10px;color:#AAA;">(hover over an item for more details)</span></div>
 		<div id="favorites_bar" style="background:#;border:1px solid #;height:68px;margin-top:3px;margin-left:10px;margin-bottom:3px;margin-right:5px;">
 		</div>
 	</div>
@@ -356,8 +366,8 @@ function subsAjaxRequest() {
 		<a href="javascript: void(0);" onclick="scrollDiv('l', 20); return false;"><img onmousedown="this.style.opacity = '1'" onmouseup="this.style.opacity = '.3'" class="favbar_scroller" src="/image/data/v3/favbar-scroll-left.png"></a>&nbsp;&nbsp;
 		<a href="javascript: void(0);" onclick="scrollDiv('r', 20); return false;"><img onmousedown="this.style.opacity = '1'" onmouseup="this.style.opacity = '.3'" class="favbar_scroller" src="/image/data/v3/favbar-scroll-right.png"></a> 
 	</div>
-	<div id="other_opts_link_cont">
-		<input type="button" value="" name="modal" id="send_to_mail" class="send_to_mail_button">
+	<div id="other_opts_link_cont"> 
+		<input type="button" value="" name="modal2" id="send_to_mail" class="send_to_mail_button">
 	</div>
 </div>
 <!-- ##################################################################### -->
@@ -424,7 +434,7 @@ function subsAjaxRequest() {
 <input type="text" name="Full_Name" id="Full_Name" value="Name" style="width:190px;background:#FDFDFD;border-radius:0px;font-size:13px;margin-bottom:12px;" onfocus="if(this.value == 'Name') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Name';}"><br>
 <input type="text" name="Email_Address" id="Email_Address" value="Email" style="width:190px;background:#FDFDFD;border-radius:0px;font-size:13px;margin-bottom:12px;" onfocus="if(this.value == 'Email') {this.value = '';}" onblur="if (this.value == '') {this.value = 'Email';}"><br>
 <textarea rows="4" name="Your_Message" id="Your_Message" onfocus="if(this.value==this.defaultValue)this.value='';" onblur="if(this.value=='')this.value=this.defaultValue;" maxlength="2000" style="width:190px;background:#FDFDFD;border-radius:0px;font-size:13px;margin-top:1px;max-width:190px;font-family:arial;">Your message...</textarea><br>
-<input type="hidden" name="Telephone_Number" id="Telephone_Number" value="http://www.namerific.com/privacy from 207.241.237.208" maxlength="100" style="width:250px;">
+<input type="hidden" name="Telephone_Number" id="Telephone_Number" value="http://www.namerific.com/privacy from 207.241.226.43" maxlength="100" style="width:250px;">
 <input type="text" value=" 3 + 4 = ?" name="Captcha" id="Captcha" style="width:190px;background:#FDFDFD;border-radius:0px;font-size:13px;margin:10px 0px;" onblur="if (this.value == '') {this.value = ' 3 + 4 = ?';this.style.color = '#888';}" onfocus="if(this.value == ' 3 + 4 = ?') {this.value = '';}"><br>
 <input type="submit" value="Submit" style="margin-left:1px;margin-top:15px;font-size:13px;color:#FFF;font-weight:bold;background:#d73a3e;border:none;padding:3px 10px;border-radius:3px;">
 </form>
@@ -478,11 +488,183 @@ function subsAjaxRequest() {
 
 
 
-<div id="notification"></div> 
+<div id="notification"></div>
+
+<script type="text/javascript">
+		$(function () {
+		/*pop up window*/
+		//select all the a tag with name equal to modal
+		$('input[name=modal2]').live('click', function(e) {
+			e.preventDefault();		
+
+			var id = '#dialog2'; 		
+
+			//Get the screen height and width
+			var maskHeight = $(document).height();
+			var maskWidth = $(window).width();
+
+			//Set heigth and width to mask to fill up the whole screen
+			$('#mask2').css({'width':maskWidth,'height':maskHeight});		
+
+			//transition effect
+			$('#mask2').fadeIn(500);
+			$('#mask2').fadeTo("fast",0.8);
+
+			//Get the window height and width
+			var winH = $(window).height();
+			var winW = $(window).width();
+			//Set the popup window to center
+			$(id).css('top',  winH/2-$(id).height()/2);
+			$(id).css('left', winW/2-$(id).width()/2);
+			//transition effect
+			$(id).fadeIn(500);
+		});
+	});
+
+	function checkemailFromFav(email){
+		var atpos=email.indexOf("@");
+		var dotpos=email.lastIndexOf(".");
+		if (atpos<1 || dotpos<atpos+2 || dotpos+2>=email.length) {
+			return false;
+		}
+		return true;
+	}
+	$(document).ready( function() {
+		//if close button is clicked
+		$('.window .close').click(function (e) {
+			//Cancel the link behavior
+			e.preventDefault();
+			$('#mask2').hide();
+			$('.window').hide();
+		});
+		//if mask is clicked
+
+		$('#mask2').click(function () {
+			$(this).hide();
+			$('.window').hide();
+		});
+		$("#close_send_to_mail").click(function (e) {
+			e.preventDefault();
+			if (checkemailFromFav( $('input[name=send_mail_recipient]').val() ) ) {
+				//send favorites
+				$.ajax({
+					type: "POST",
+					dataType: "json",
+					url: 'index.php?route=product/product/sendFavoritesToEmail',
+					data: $('#send-to-mail-form').serialize(),
+					beforeSend: function() {
+						//$('#ms-new-product a.button').hide();
+						$('#sendToEmailResult').html('<span class="wait">&nbsp;<img src="catalog/view/theme/default/image/loading.gif" alt="" /></span>');
+					},
+
+					success: function(jsonData) {
+						$('#sendToEmailResult').html('');
+						if (!jQuery.isEmptyObject(jsonData.errors)) {
+							for (error in jsonData.errors) {
+								alert(jsonData.errors);
+							}
+						} else {
+							$('#send_mail_recipient').html('');
+							if (jsonData['error']!="") {
+								$('#sendToEmailResult').html('<p style="color:red">'+jsonData['result']+'</p>');
+							}
+							else {
+								$('#sendToEmailResult').html('<p style="color:green">'+jsonData['result']+'</p>');
+							}
+						}
+					}
+				});
+			}
+			else {
+				$('#sendToEmailResult').html('<p style="color:red">Please enter a valid email address.</p>');
+			}
+		});
+		$(window).resize(function () {
+			var box = $('#boxes2 .window');
+			//Get the screen height and width
+			var maskHeight = $(document).height();
+			var maskWidth = $(window).width();
+
+			//Set height and width to mask to fill up the whole screen
+			$('#mask2').css({'width':maskWidth,'height':maskHeight});
+			//Get the window height and width
+			var winH = $(window).height();
+			var winW = $(window).width();
+
+			//Set the popup window to center
+			box.css('top',  winH/2 - box.height()/2);
+			box.css('left', winW/2 - box.width()/2);
+		});
+
+	});
+
+	</script>
+	<style type="text/css">
+		#mask2 {
+		  position:absolute;
+		  left:0;
+		  top:0;
+		  z-index:9000;
+		  background-color:#EEE;
+		  display:none;
+		}
+		#boxes2 .window {
+		  position:fixed;
+		  left:0;
+		  top:0;
+		  width:440px;
+		  height:50px;
+		  display:none;
+		  z-index:9999;
+		  padding:20px;
+		  border-radius:10px;
+		}
+	
+		#boxes2 #dialog2 {
+		  width:400px; 
+		  height:100px;
+		  padding:20px;
+		  background-color:#F9F9F9;
+		  box-shadow:0px 0px 50px #999;
+		}
+		
+				.categoriesList li {
+			list-style:none;
+			margin:0px;
+			padding:0px;
+		}
+	</style>
+
+	<div id="boxes2">
+		<div id="dialog2" class="window">
+			<div style="margin-bottom:2px;">
+				<span style="font-size:16px;font-weight:bold;">
+					Please enter your email address...					
+				</span>
+				<span style="float:right">
+					<a style="font-weight:bold;text-decoration:none;margin-left:-15px;" class="close" href="/web/20140125013738/http://www.namerific.com/#">	Close
+					</a>
+				</span>
+			</div>
+			<form id="send-to-mail-form">
+									<input type="text" name="send_mail_recipient" id="send_mail_recipient" style="width:95%">
+							</form>			
+			<div style="margin-top:10px">
+				<center>
+					<a href="/web/20140125013738/http://www.namerific.com/javascript%20:" style="font-size: 15px; text-decoration: none; font-weight: bold; color: rgb(255, 255, 255); background: none repeat scroll 0pt 0pt rgb(254, 151, 69); padding: 6px 20px;margin-left:10px" id="close_send_to_mail">
+						Send
+					</a>
+				</center>
+			</div>
+			<div id="sendToEmailResult" style="font-size:95%;margin-top:5px;text-align:center"></div> 
+		</div>
+		<div id="mask2"></div>
+	</div>
+ 
 <div id="content" style="margin-bottom:0px">                          <p>
 	<span style="color:#696969;"><span style="font-size: 22px;"><strong>Privacy Policy</strong></span></span></p>
 <p>
-	<em>Last Modified: 12/12/2012</em></p>
+	<em>Last Modified: <em>Feb 13th, 2014 at 04:34AM Pacific Standard Time</em></em></p>
 <p>
 	Your privacy is important to us. This privacy statement provides information about the personal information that we may collect, and the ways in which we may use that personal information.<br>
 	<br>
@@ -493,10 +675,12 @@ function subsAjaxRequest() {
 	• Your Full Name<br>
 	• Your Billing and/or Home Address<br>
 	• Your Phone Number(s)<br>
-	• Your Personal, Business, or Paypal Email Address(s)<br>
+	• Your Personal, Business, Domain Registrar, or Paypal Email Address(s)<br>
 	• Your Domain Registrar Customer Number(s) or User ID(s)<br>
 	• Your Driver's License, State ID Card, or Passport<br>
-	• Your Bank Account Information (We <u>only</u> request this via telephone. This is never stored electronically.)<br>
+	• Your Bank Account Information<br>
+	• Your Domain Registrar Account Number(s)<br>
+	• Your Social Networking Usernames (Skype, Twitter, etc)<br>
 	• Your IP Address<br>
 	<br>
 	<strong><u>Using personal information</u></strong><br>
@@ -512,7 +696,11 @@ function subsAjaxRequest() {
 	<br>
 	Where we disclose your personal information to agents or sub-contractors for these purposes, the agent or sub-contractor in question will be obligated to use that personal information in accordance with the terms of this privacy statement.<br>
 	<br>
-	In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, we may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings.<br>
+	In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, we may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings.</p>
+<p>
+	<strong><u>Transaction Privacy After A Domain Purchase</u></strong></p>
+<p>
+	Unless you've notified us after a purchase to request transaction privacy via non-disclosure agreement or other similar agreement, Namerific has the full right to print, distribute, copy, display electronically, share, market, discuss, and/or publicize your purchased 'domain name(s)' including logo(s) on Namerific and any other place Namerific deems necessary, such as for the purpose of marketing. Namerific may also pubicize the 'sale' price of the aforementioned purchased domain(s).<br>
 	<br>
 	<strong><u>Securing your data</u></strong><br>
 	<br>
@@ -535,7 +723,9 @@ function subsAjaxRequest() {
 <p>
 	&nbsp;</p>
 <center>
-	<strong><u>Disclaimer</u></strong></center>
+	<p>
+		<strong><u>Disclaimer</u></strong></p>
+</center>
 <p>
 	&nbsp;</p>
 <p>
@@ -560,11 +750,112 @@ function subsAjaxRequest() {
 </div>
 </div> <!-- SITE CONTAINER CLOSING TAG - !DO NOT DELETE THIS! -->
 
-<div style="background: url('/image/data/v2/bottom_page_line.png') repeat-x 0 0 #FFF;height:2px;">
-<div style="width:990px;margin:auto;">
-<div style="margin-bottom:-2px;text-align:center;color:#BBB;font-size:10px;">Namerific LLC © 2013 &nbsp;&nbsp;&nbsp; <a href="/terms" style="color:#BBB;font-size:11px;text-decoration:none;">Terms of Use</a> &nbsp;&nbsp;&nbsp; <a style="color:#BBB;font-size:10px;text-decoration:none;" href="/privacy">Privacy Policy</a>
+<!-- Start Boxes -->
+
+<style type="text/css">
+
+.hover_clear:hover {
+	opacity:.7;
+}
+
+</style>
+
+<!-- End Boxes -->
+
+<script type="text/javascript">
+$(document).ready(function(){
+	$(".subscribe_toggle_2").click(function () {
+		$(".subscribe_div").slideDown();
+		$("html, body").animate({ scrollTop: 0 }, 500);
+	});
+	$(".contact_toggle_2").click(function () {
+		$(".contact_div").slideDown();
+		$("html, body").animate({ scrollTop: 0 }, 500);
+	});
+});
+</script>
+
+<div style="background:url(/image/data/v4/top_footer_bg.png) repeat-x #DDD;height:72px;padding-left:40px;margin-top:35px;">
+<table style="width:900px;margin:auto;">
+<tbody>
+<tr>
+<td>
+<div style="margin-top:11px;">
+<div style="float:left;height:43px;width:15px;background:url(/image/data/v4/testimony_left.png) no-repeat">
+</div>
+<div style="float:left;height:43px;width:30px;background:url(/image/data/v4/testimony_background.png) repeat-x">
+<img style="margin-top:9px;" src="image/data/v4/testimony_icon.png">
+</div>
+<div style="float:left;height:43px;width:700px;background:url(/image/data/v4/testimony_background.png) repeat-x">
+<div style="margin-top:10px;font-size:12px;color:#777;">
+<em>Great service and I appreciate the uber-fast turnaround by the way. You've got a great business model going here. - Rich K.</em>
 </div>
 </div>
+<div style="float:left;height:43px;width:15px;background:url(/image/data/v4/testimony_right.png) no-repeat">
+</div>
+</div>
+<div style="float:left;font-weight:bold;font-style:italic;margin-top:11px;padding-left:3px;">
+Vocoli.com
+</div>
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+
+<div style="background:#cae9ff;height:129px;padding-left:40px;">
+<table style="width:900px;margin:auto;">
+<tbody>
+<tr>
+<td>
+<div style="margin:15px 0 0 -20px;">
+<a class="hover_clear" href="/help"><img src="/image/data/v4/footer_help_center.png"></a><br>
+<a class="hover_clear" href="/blog"><img src="/image/data/v4/footer_blog.png"></a><br>
+<a class="hover_clear contact_toggle_2"><img src="/image/data/v4/footer_contact.png"></a><br>
+<a class="hover_clear subscribe_toggle_2"><img src="/image/data/v4/footer_subscribe.png"></a>
+</div>
+</td>
+<td style="width:600px;background:;padding-top:10px;">
+
+<div style="background:#;height:95px;width:560px;margin-left:50px;;border-radius:3px;">
+
+<div style="width:80px;background:;float:left;padding-top:15px;"><img src="image/data/v4/domainers.png"></div>
+<div style="width:200px;float:left;"><br><strong>Are you a domain owner?</strong><br><a class="hover_clear" href="/sell" title="Sell with us!" style="background:#278cd2;border-radius:3px;padding:3px 8px;font-size:12px;color:#FFF;text-decoration:none;font-weight:bold;">Sell with us!</a></div>
+<div style="width:85px;background:;float:left;padding-top:15px;"><img src="image/data/v4/designers.png"></div>
+<div style="float:left;"><br><strong>Are you a logo designer?</strong><br><a class="hover_clear" href="logodesigners" title="Design with us!" style="background:#278cd2;border-radius:3px;padding:3px 8px;font-size:12px;color:#FFF;text-decoration:none;font-weight:bold;">Design with us!</a></div>
+</div>
+
+</td>
+<td style="text-align:right;padding:10px 33px 0px 0px;">
+<span style="color:#777;font-size:10px;">Get in touch anytime!</span><br>
+<span style="color:#333;font-size:16px;">1-888-894-5434</span><br>
+<span style="color:#777;font-size:10px;">Stay Connected</span><br>
+<a class="hover_clear" href="http://www.facebook.com/namerific" target="blank" title="Follow Namerific on Facebook"><img src="/image/data/v4/facebook.png" style="padding-right:5px;"></a><a class="hover_clear" href="http://www.twitter.com/namerific" target="blank" title="Follow Namerific on Twitter"><img src="/image/data/v4/twitter.png"></a>
+
+</td>
+</tr>
+</tbody>
+</table>
+</div>
+
+<div style="background:#2f8ccd;height:65px;padding-left:40px;">
+<table style="width:990px;margin:auto;height:55px;">
+<tbody>
+<tr>
+<td style="padding-left: 15px; padding-top: 8px; width: 300px;">
+<div style="font-size:10px;">
+<span style="color:#FFF;font-weight:bold;font-family:tahoma;">Namerific © 2014</span><span style="padding-left:15px;"><a class="hover_clear" href="/terms" style="color:#FFF;font-size:10px;font-weight:bold;text-decoration:none;font-family:tahoma;">Terms Of Use</a></span><a class="hover_clear" href="/privacy" style="padding-left:10px;color:#FFF;font-size:10px;font-weight:bold;text-decoration:none;font-family:tahoma;">Privacy Policy</a>
+</div>
+</td>
+<td style="text-align: center; padding-left: 5px; padding-top: 7px; width: 460px;">
+<img style="float:left;" src="/image/data/v4/new_payments.png">
+</td>
+<td style="padding-right:15px;padding-top:12px;">
+<span style=""><img src="/image/data/v4/ssl_secure.png"><a class="hover_clear" href="http://www.bbb.org/greater-san-francisco/business-reviews/brand-development/namerificcom-in-san-francisco-ca-450747" title="Check us out on the Better Business Bureau" target="_blank"><img src="/image/data/v4/bbb.png"></a></span>
+</td>
+</tr>
+</tbody>
+</table>
 </div>
 
 <script type="text/javascript">
