--- a/f/fl/fla/flash-game.net.html
+++ b/f/fl/fla/flash-game.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the flash-game.net privacy policy that was archived on 2013-10-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131013021141id_/http%3A//www.flash-game.net/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the flash-game.net privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301005316id_/http%3A//www.flash-game.net/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 <meta charset="utf-8">
@@ -11,11 +11,20 @@
 <link type="text/css" href="/assets/css/common.css" rel="stylesheet">
 <link type="text/css" href="/assets/css/screen.css" rel="stylesheet">
 <link type="text/css" href="/assets/css/page.css" rel="stylesheet">
-<script type="text/javascript" src="/assets/scripts/jquery.js"></script>
+<script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-TZ3WD9"></script><script type="text/javascript" src="/assets/scripts/jquery.js"></script>
 <script type="text/javascript" src="/assets/scripts/common.js?v=3.0"></script>
 <script type="text/javascript" src="/assets/scripts/plug.js?v=1.0"></script>
 </head>
 <body>
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-TZ3WD9"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TZ3WD9');</script>
+<!-- End Google Tag Manager -->
 <div id="fullscreen-bj"></div>
 	<header>
 		<div id="game-share-search">
@@ -50,23 +59,20 @@ var suggestUrl = '/';
 Suggest_Initialize('query', 255, 0, 30);
 </script><div id="suggest_key" class="suggest_key" style="position: absolute; left: 200px; top: 61px; z-index: 100; background-color: rgb(255, 255, 255);"></div><section id="ad-game-topic">
 		<div class="top728ad">
-		<script type="text/javascript"><!--
-        google_ad_client = "ca-pub-0914101519795124";
-        /* 728x90 Game */
-        google_ad_slot = "1060798038";
-        google_ad_width = 728;
-        google_ad_height = 90;
-        //-->
-        </script>
-        <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-        </script>
+			<script async="" src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+			<!-- 728x90 Game -->
+			<ins class="adsbygoogle" style="display:inline-block;width:728px;height:90px" data-ad-client="ca-pub-0914101519795124" data-ad-slot="1060798038"></ins>
+			<script>
+			(adsbygoogle = window.adsbygoogle || []).push({});
+			</script>
 		</div>
-		<a class="topicgame-top" href="/free-games/shooting-games.php"><img width="252" height="90" alt="play shooting games on Flash Game" src="/assets/images/shooting-games.jpg"></a>
+		<!-- <a class="topicgame-top" href="/free-games/shooting-games.php"><img width="252" height="90" alt="play shooting games on Flash Game" src="/assets/images/shooting-games.jpg"></a>
         <a class="topicgame-top" href="/free-games/board-games.php"><img width="252" height="90" alt="play board games on Flash Game" src="/assets/images/board-games.jpg"></a>
         <a class="topicgame-top" href="/free-games/fighting-games.php"><img width="252" height="90" alt="play fighting games on Flash Game" src="/assets/images/fighting-games.jpg"></a>
         <a class="topicgame-top" href="/free-games/racing-games.php"><img width="252" height="90" alt="play racing games on Flash Game" src="/assets/images/racing-games.jpg"></a>
         <a class="topicgame-top" href="/search.php?q=escape"><img width="252" height="90" alt="play room escape games on Flash Game" src="/assets/images/room-escape.gif"></a>
-        <a class="topicgame-top" href="/search.php?q=mario"><img width="252" height="90" alt="play mario games on Flash Game" src="/assets/images/mario.gif"></a>
+        <a class="topicgame-top" href="/search.php?q=mario"><img width="252" height="90" alt="play mario games on Flash Game" src="/assets/images/mario.gif"></a> -->
+        <a class="topicgame-top" href="/search.php?q=ski"><img width="252" height="90" alt="play ski games on Flash Game" src="/assets/images/ski.gif"></a>
 	</section>
 	<nav id="main-nav">
 		<div class="game-nav">
@@ -119,16 +125,7 @@ Suggest_Initialize('query', 255, 0, 30);
 			</li>
 		</ul>
 	</div>
-</div>	</section><script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
-<script type="text/javascript">
-var pageTracker = _gat._getTracker("UA-2912427-1");
-pageTracker._initData();
-pageTracker._trackPageview();
-</script>
-	<section class="center1005">
+</div>	</section>	<section class="center1005">
 		<div class="search-game">
 			<strong class="search-game-title">Our 100 Most-Searched Flash Games</strong>
 			<ul class="search-game-ul">
@@ -173,7 +170,7 @@ pageTracker._trackPageview();
 						<li><a target="_blank" href="/game/5351/kick-out-bieber.html" title="Kick Out Bieber">Kick Out Bieber</a></li>
 						<li><a target="_blank" href="/game/6271/solarmax.html" title="Solarmax">Solarmax</a></li>
 						<li><a target="_blank" href="/game/5699/shields-of-fate.html" title="Shields Of Fate">Shields Of Fate</a></li>
-						<li><a target="_blank" href="/game/4854/agent-b10.html" title="Agent B10">Agent B10</a></li>
+						<li><a target="_blank" href="/game/4473/buschido-solitaire.html" title="Buschido Solitaire">Buschido Solitaire</a></li>
 					</ul>
 				</li>
 				<li style="width:220px;">
@@ -191,7 +188,7 @@ pageTracker._trackPageview();
 		</div>
 	</section>
 	<footer>
-		<article id="flash-game-des"><abbr title="A lot of fun flashgame you can play on this site">Copyright © 2001-2013 <a href="http://www.flash-game.net">Flash Game</a></abbr>, all rights reserved.<br>
+		<article id="flash-game-des"><abbr title="A lot of fun flashgame you can play on this site">Copyright © 2001-2014 <a href="http://www.flash-game.net">Flash Game</a></abbr>, all rights reserved.<br>
 			Flash-Game.net is a website providing free online games and addicting games for all.<br>
 			All game files on Flash-Game.net are copyrighted or trademarked by their respective owners or authors.<br>
 		</article>
