--- a/h/ha/hal/hallels.com.html
+++ b/h/ha/hal/hallels.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hallels.com privacy policy that was archived on 2013-12-28.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228234023id_/http%3A//www.hallels.com/privacypolicy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hallels.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301014039id_/http%3A//www.hallels.com/privacypolicy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -9,17 +9,17 @@
 <meta http-equiv="Imagetoolbar" content="no">
 	<meta name="robots" content="index, follow">
 	<meta name="Googlebot-news" content="index, follow">
-<link rel="stylesheet" href="http://cdn.hallels.com/views/css/main.css" type="text/css">
-<link rel="stylesheet" href="http://cdn.hallels.com/views/css/aboutus.css" type="text/css">
-<link rel="stylesheet" href="http://cdn.hallels.com/views/css/inner_common.css" type="text/css">
+<link rel="stylesheet" href="http://www.hallels.com/views/css/main.css" type="text/css">
+<link rel="stylesheet" href="http://www.hallels.com/views/css/aboutus.css" type="text/css">
+<link rel="stylesheet" href="http://www.hallels.com/views/css/inner_common.css" type="text/css">
 
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Viga" type="text/css">
-<link rel="stylesheet" href="http://cdn.hallels.com/home/js/colorbox/colorbox.css" type="text/css">
+<link rel="stylesheet" href="http://www.hallels.com/home/js/colorbox/colorbox.css" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="Hallels RSS Feeds" href="http://www.hallels.com/rss/">
-<link rel="shortcut icon" href="http://cdn.hallels.com/favicon.ico" type="image/x-icon">
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" src="http://cdn.hallels.com/home/js/common.js"></script>
+<link rel="shortcut icon" href="http://www.hallels.com/favicon.ico" type="image/x-icon">
+<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script src="https://secure.quantserve.com/quant.js" async="" type="text/javascript"></script><script type="text/javascript" src="http://www.hallels.com/home/js/common.js"></script>
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-<script type="text/javascript" src="http://cdn.hallels.com/home/js/colorbox/jquery.colorbox-min.js"></script>
+<script type="text/javascript" src="http://www.hallels.com/home/js/colorbox/jquery.colorbox-min.js"></script>
 <script type="text/javascript" src="//assets.pinterest.com/js/pinit.js"></script>
 <script type="text/javascript">
 _current_device_type='computer';
@@ -32,7 +32,7 @@ _current_ad_keywords='';
 <!-- uni-hdr start -->
 <header class="uni-hdr">
   <div class="uni-innerwrap">
-    <div class="uni-logo"><a href="/"><img src="http://cdn.hallels.com/views/images/logo.png" width="167" height="73" alt="Hallels"></a>
+    <div class="uni-logo"><a href="/"><img src="http://www.hallels.com/views/images/logo.png" width="167" height="73" alt="Hallels"></a>
         <div class="social-top">
           <ul>
           <li><iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.facebook.com%2FHallelscom&amp;send=&amp;layout=button_count&amp;width=77&amp;show_faces=1&amp;action=like&amp;locale=en_US&amp;colorscheme=light&amp;font&amp;height=20" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:77px; height:20px;" allowtransparency="true"></iframe></li>
@@ -100,6 +100,7 @@ _current_ad_keywords='';
 
 </header>
 <!-- uni-hdr end -->
+
 
 <script type="text/javascript">
 $(".uni-m").hover(function(){
@@ -191,7 +192,7 @@ If you have any questions about this privacy statement, the practices of this si
 <footer class="uni-ftr">
 <div class="uni-innerwrap">
 <!--footer leftside:logo,copyright,etc.-->    
-    	<div class="footerLeft"> <a href="/"><img src="http://cdn.hallels.com/views/images/logo_footer.png" alt="hallels home"></a>
+    	<div class="footerLeft"> <a href="/"><img src="http://www.hallels.com/views/images/logo_footer.png" alt="hallels home"></a>
           <p class="copyright">Copyright © 2000-2013 Hallels.com. All rights reserved.</p>
             <ul>
             	<li><a href="/aboutus">About Us</a></li>
@@ -205,14 +206,41 @@ If you have any questions about this privacy statement, the practices of this si
 <!--footer leftside:logo,copyright,etc. ends-->
 <!--footer rightside:social-->            
         <div class="footerRight"> 
-        	<a href="https://twitter.com/hallels_tweets" target="_blank"><img src="http://cdn.hallels.com/views/images/footer_twt_icon.png" alt="twitter" class="tw_bottom"></a>
-            <a href="https://www.facebook.com/pages/Hallels/519595448075133" target="_blank"><img src="http://cdn.hallels.com/views/images/footer_fb_icon.png" alt="facebook" class="fb_bottom"></a>
+        	<a href="https://twitter.com/hallels_tweets" target="_blank"><img src="http://www.hallels.com/views/images/footer_twt_icon.png" alt="twitter" class="tw_bottom"></a>
+            <a href="https://www.facebook.com/pages/Hallels/519595448075133" target="_blank"><img src="http://www.hallels.com/views/images/footer_fb_icon.png" alt="facebook" class="fb_bottom"></a>
         </div>
 <!-- uni-ftr end-->          
 </div>
 </footer>
-<!-- hidden iframe -->
-<iframe width="0" height="0" name="hiddenframe" style="display:none;"></iframe>
+
+
+
+<!-- left ad -->
+<style>
+#fixme {
+/* IE 5.0/Win and other lesser browsers will use this */
+position: absolute; width: 160px; height: 600px; left: 50%; margin-left:-700px; top: 320px; background-color: #f7f7f7; font: normal normal 12px/1.2 Gulim; color: 333533; z-index:0;
+}
+body > div#fixme {
+/* used by Netscape6+/Mozilla, Opera 5+, Konqueror, Safari, OmniWeb 4.5+, ICEbrowser */
+position: absolute; width: 160px; height: 600px; position:fixed; left: 50%; margin-left:-700px; top: 250px; background-color: #f7f7f7; font: normal normal 12px/1.2 Gulim; color: 333533; z-index:0;
+}
+</style>
+<div id="left_ad">
+	<div id="fixme">
+		<!-- hallels/DEF_L160x600_A -->
+		<script type="text/javascript">
+			var ord = window.ord || Math.floor(Math.random() * 1e16);
+			document.write('<script type="text/javascript" src="http://ad.doubleclick.net/N7241/adj/hallels/DEF_L160x600_A;sz=160x600;ord=' + ord + '?"><\/script>');
+		</script><script type="text/javascript" src="http://ad.doubleclick.net/N7241/adj/hallels/DEF_L160x600_A;sz=160x600;ord=3702588475007589?"></script>
+		<noscript>
+		<a href="http://ad.doubleclick.net/N7241/jump/hallels/DEF_L160x600_A;sz=160x600;ord=[timestamp]?">
+		<img src="http://ad.doubleclick.net/N7241/ad/hallels/DEF_L160x600_A;sz=160x600;ord=[timestamp]?" width="160" height="600" />
+		</a>
+		</noscript>
+	</div>
+</div>
+<!-- //left ad -->
 
 
 <!-- start getclicky code -->
@@ -225,8 +253,8 @@ If you have any questions about this privacy statement, the practices of this si
 			  };
 			</script>
 			<script src="//static.getclicky.com/js" type="text/javascript"></script>
-			<script type="text/javascript">try{ clicky.init(100639281); }catch(e){}</script>
-			<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100639281ns.gif" /></p></noscript>
+			<script type="text/javascript">try{ clicky.init(100564037); }catch(e){}</script>
+			<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/100564037ns.gif" /></p></noscript>
 		</div><!-- end getclicky code -->
 
 <!-- Start of StatCounter Code for Default Guide -->
@@ -278,7 +306,7 @@ _gaq.push(['_trackPageview']);
 		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	  })();
-	</script><script type="text/javascript" src="http://cdn.hallels.com/home/js/article.js"></script>
+	</script><script type="text/javascript" src="http://www.hallels.com/home/js/article.js"></script>
 
 <!-- Start of addthis Code -->
 <!-- End of addthis Code -->
