--- a/g/ga/gam/gamestoon.com.html
+++ b/g/ga/gam/gamestoon.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the gamestoon.com privacy policy that was archived on 2013-09-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130911040146id_/http%3A//www.gamestoon.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the gamestoon.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301022104id_/http%3A//gamestoon.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head></head><body><div id="main">
   <h2>Privacy Policy</h2>
