--- a/d/do/dow/downhh.com.html
+++ b/d/do/dow/downhh.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the downhh.com privacy policy that was archived on 2013-09-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130906232946id_/http%3A//www.downhh.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the downhh.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301031506id_/http%3A//downhh.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Privacy policy</title>
