uploadseeds.com (archived on 2014-03-01)
{
  "alexa_rank": 15479,
  "analysis_subcorpus": true,
  "categories": "uncategorized",
  "char_count": 2659,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.47,
  "homepage_snapshot_redirected_domain": "uploadseeds.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20140228150856id_/http://www.uploadseeds.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20140228150856id_/http%3A//uploadseeds.com",
  "interval": "2014_A",
  "link_text": "Privacy policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "uploadseeds.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20140301032917id_/http%3A//www.uploadseeds.com/privacy_policy",
  "policy_title": "",
  "policy_url": "uploadseeds.com/privacy_policy",
  "sha1": "ffac0f9300bcffc95532e0e3bbb98f5405fc840f",
  "simhash": 914263639172884370,
  "simhash_updated": false,
  "site_hostname": "uploadseeds.com",
  "site_url": "http://uploadseeds.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20140301032917",
  "word_count": 451,
  "year": 2014
}

--- a/u/up/upl/uploadseeds.com.html
+++ b/u/up/upl/uploadseeds.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uploadseeds.com privacy policy that was archived on 2013-08-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130806233516id_/http%3A//www.uploadseeds.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uploadseeds.com privacy policy that was archived on 2014-03-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140301032917id_/http%3A//www.uploadseeds.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 
@@ -338,7 +338,7 @@ padding: 2px;
 	<form action="account.php" method="post"> 
 	
 	<a href="/">PC UPLOAD</a> | <a href="/remote_upload">REMOTE UPLOAD</a>  | <a href="/premium">PREMIUM</a> | 
-	<a href="/faq">FAQ</a> | <a href="/news">NEWS</a> | <a href="/contact_us">CONTACT</a> | <a href="/advertising" target="_self">ADVERTISE</a> | 
+	<a href="/faq">FAQ</a> | <a href="http://forum.uploadseeds.com" target="_new">FORUM</a> | <a href="/contact_us">CONTACT</a> | <a href="/advertising" target="_self">ADVERTISE</a> | 
 	<a href="/store" title="Uploadseeds Store">STORE</a> |
 	
 
