meeton.com (archived on 2017-03-30)
{
  "alexa_rank": 489900,
  "analysis_subcorpus": true,
  "categories": "business;education",
  "char_count": 14633,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.08,
  "homepage_snapshot_redirected_domain": "meeton.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170323212335id_/http://www.meeton.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170323212335id_/http%3A//meeton.com",
  "interval": "2017_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "meeton.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170330182513id_/http%3A//www.meeton.com/privacy-policy.html",
  "policy_title": "MeetON.com",
  "policy_url": "meeton.com/privacy-policy.html",
  "sha1": "353f191d5d9dc193aaa01e8f6e1b4ebc1f8bf191",
  "simhash": 17218828888745042050,
  "simhash_updated": false,
  "site_hostname": "meeton.com",
  "site_url": "http://meeton.com",
  "smog": 15.95,
  "strict_updated": true,
  "timestamp": "20170330182513",
  "word_count": 2321,
  "year": 2017
}

--- a/m/me/mee/meeton.com.html
+++ b/m/me/mee/meeton.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the meeton.com privacy policy that was archived on 2016-12-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161223142448id_/http%3A//www.meeton.com/privacy-policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the meeton.com privacy policy that was archived on 2017-03-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170330182513id_/http%3A//www.meeton.com/privacy-policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 
@@ -34,7 +34,7 @@ jQuery.noConflict();    //]]>
     //<![CDATA[
 
         jQuery.ajaxSetup({
-            data: {request_authenticity_token: '7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f'},
+            data: {request_authenticity_token: '617473bac80dd30ad4657f5afb7a795ec2abf785'},
             cache: false
         });
         var baseUrl = 'http://www.meeton.com/';
@@ -45,7 +45,7 @@ jQuery.noConflict();    //]]>
         var baseUrlStaticSwfProblems = 'http://static-meeton-com.s3.amazonaws.com/';
 
         var settings = {};
-        settings.request_authenticity_token = '7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f';
+        settings.request_authenticity_token = '617473bac80dd30ad4657f5afb7a795ec2abf785';
         settings.activateTabsSwitch = 1;
         settings.autoShowExpressRegister = 0;
         settings.TwitterApiKey = '9ghdhSeQAZ1lUs9TKMSreg';
@@ -53,7 +53,7 @@ jQuery.noConflict();    //]]>
         settings.registerPageUrl = 'https://www.meeton.com/register.html';
         settings.loginPageUrl = 'https://www.meeton.com/login.html';
 
-        settings.siteHeaderTweetsHash = '77c83d74b9ef8108cd41abe3ac6aaffd';
+        settings.siteHeaderTweetsHash = 'fda104e11510d790e536331b90b259a1';
         settings.latestNewsFromFriendsHash = 'd41d8cd98f00b204e9800998ecf8427e';
         settings.userLoggedFriendsHash = 'd41d8cd98f00b204e9800998ecf8427e';
         settings.liveFutureEventsHash = '';
@@ -239,7 +239,7 @@ jQuery.noConflict();    //]]>
         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
     })();
 </script>
-<!--1015012336-->
+<!--1018098194-->
     </head>
 
     <body>
@@ -282,25 +282,22 @@ jQuery.noConflict();    //]]>
                 <ul>
             <li><a href="http://www.meeton.com/categories/market-america-university-majors/">University Majors</a></li>
             <li><a href="http://www.meeton.com/categories/anti-aging/">Anti-Aging</a></li>
-            <li><a href="http://www.meeton.com/categories/beauty/">Beauty</a></li>
             <li><a href="http://www.meeton.com/categories/beauty-motives-skin-care-personal-care/">Beauty (Motives/Skin Care/Personal Care)</a></li>
             <li><a href="http://www.meeton.com/categories/capital-resources/">Capital Resources</a></li>
             <li><a href="http://www.meeton.com/categories/conquer-entertainment/">Conquer Entertainment</a></li>
-            <li><a href="http://www.meeton.com/categories/health-and-nutrition/">Health &amp; Nutrition</a></li>
             <li><a href="http://www.meeton.com/categories/health-and-nutrition-and-anti-aging/">Health &amp; Nutrition and Anti-Aging</a></li>
+            <li><a href="http://www.meeton.com/categories/home-and-garden-snap-pure-h20-autoworks/">Home &amp; Garden (Snap, Pure H20, Autoworks)</a></li>
     </ul>
 <ul>
-            <li><a href="http://www.meeton.com/categories/home-and-garden/">Home &amp; Garden</a></li>
-            <li><a href="http://www.meeton.com/categories/home-and-garden-snap-pure-h20-autoworks/">Home &amp; Garden (Snap, Pure H20, Autoworks)</a></li>
             <li><a href="http://www.meeton.com/categories/ma-capital-resources/">MA Capital Resources</a></li>
             <li><a href="http://www.meeton.com/categories/market-place-partner-stores-affiliates-strategic-partnerships-merchandising/">Market Place (Partner Stores, Affiliates, Strategic Partnerships, Merchandising)</a></li>
             <li><a href="http://www.meeton.com/categories/mobile/">Mobile</a></li>
             <li><a href="http://www.meeton.com/categories/nmtss-trainings/">NMTSS Trainings</a></li>
             <li><a href="http://www.meeton.com/categories/sales-and-field-development/">Sales &amp; Field Development</a></li>
             <li><a href="http://www.meeton.com/categories/shop-com/">Shop.com</a></li>
+            <li><a href="http://www.meeton.com/categories/social-media/">Social Media</a></li>
     </ul>
 <ul>
-            <li><a href="http://www.meeton.com/categories/social-media/">Social Media</a></li>
             <li><a href="http://www.meeton.com/categories/tls-weight-loss-solution/">TLS Weight Loss Solution</a></li>
             <li><a href="http://www.meeton.com/categories/ufo-training/">UFO Training</a></li>
             <li><a href="http://www.meeton.com/categories/us-and-international-business-opportunity/">US &amp; International Business Opportunity</a></li>
@@ -585,7 +582,6 @@ jQuery.noConflict();    //]]>
 <div class="break"></div>                </div>
             </li>
 
-            <li><a class="m5" href="http://www.meeton.com/shop.html">Shop</a></li>
             <li><a class="m6" href="http://www.meeton.com/meet-me.html">MeetME</a></li>
 
                     </ul>
@@ -654,13 +650,10 @@ jQuery.noConflict();    //]]>
                                                 <option value="65">SpanishEMP</option>
                                                 <option value="26">Market America</option>
                                                 <option value="32">Anti-Aging</option>
-                                                <option value="33">Beauty</option>
                                                 <option value="41">Beauty (Motives/Skin Care/Personal Care)</option>
                                                 <option value="39">Capital Resources</option>
                                                 <option value="27">Conquer Entertainment</option>
-                                                <option value="31">Health &amp; Nutrition</option>
                                                 <option value="42">Health &amp; Nutrition and Anti-Aging</option>
-                                                <option value="34">Home &amp; Garden</option>
                                                 <option value="43">Home &amp; Garden (Snap, Pure H20, Autoworks)</option>
                                                 <option value="44">MA Capital Resources</option>
                                                 <option value="45">Market Place (Partner Stores, Affiliates, Strategic Partnerships, Merchandising)</option>
@@ -1039,7 +1032,10 @@ jQuery.noConflict();    //]]>
         
 
             <div id="content">
-                                <div id="left" class="text_content full_width">
+                                <div class="shop-powered">
+                    <a href="http://www.shop.com/" target="_blank" style="display:block; width: 100%; height: 100%"></a>
+                </div>
+                                                <div id="left" class="text_content full_width">
     <h1>MEETON.COM</h1>
     <h3>PRIVACY POLICY</h3>
     <p>This Privacy Policy applies to MeetON.com. Live Enterprise, LLC d/b/a MeetON.com ("MeetON.com", "we", "us", or "our") provides content streaming and social networking capabilities that enable the sharing of live and recorded video and audio content and chat via the Internet, mobile, and other data delivery means through MeetON.com’s proprietary platform (the "Service") and our website accessible at meeton.com (the "Site").</p>
@@ -1185,7 +1181,7 @@ jQuery.noConflict();    //]]>
     <h3 class="popuptitle" id="register_expressAccount_h3">Login / Express Register</h3>
     <div class="colw mright50">
         <form id="expressPopupLoginForm" class="generalform short" method="post" action="https://www.meeton.com/login/loginProcess/" onsubmit="return collectFieldsToPassOnLogin()">
-            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f">
+            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="617473bac80dd30ad4657f5afb7a795ec2abf785">
             <fieldset>
                 <legend>Login</legend>
                 <p>Please login into your account.</p>
@@ -1201,7 +1197,7 @@ jQuery.noConflict();    //]]>
 
     <div class="colw">
         <form class="generalform short full-with-button" method="post" id="expressRegisterForm" name="expressRegisterForm" action="https://www.meeton.com/register/registerExpressProcess/">
-            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f">
+            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="617473bac80dd30ad4657f5afb7a795ec2abf785">
             <fieldset>
                 <legend id="register_fullAccount_legend" style="display:none;">Full Account</legend>
                 <p id="register_fullAccount_p" style="display:none;">Create an full account and you will have access to all content that is on MeetON.</p>
@@ -1240,7 +1236,7 @@ jQuery.noConflict();    //]]>
         <a href="javascript:hidePopup('joinBroadcasterPopup')" class="butclosepopup" title="Close">X</a>
         <h3 class="popuptitle">Join live with broadcaster</h3>
         <form class="generalform short" id="joinBroadcasterForm" method="post" action="">
-            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f">            <input type="hidden" name="sessionID" id="jbpSessionID" value="">
+            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="617473bac80dd30ad4657f5afb7a795ec2abf785">            <input type="hidden" name="sessionID" id="jbpSessionID" value="">
             <div id="formContent"></div>
             <div class="break"></div>
             <div class="text_center mtop20px"><button type="submit" class="button greenbutton psides40px">JOIN NOW</button></div>
@@ -1253,7 +1249,7 @@ jQuery.noConflict();    //]]>
     <a href="javascript:hidePopup('joinEventPopup')" class="butclosepopup" title="Close">X</a>
     <h3 class="popuptitle">Join event</h3>
     <form class="generalform short" id="joinEventForm" method="post" action="">
-        <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f">    	<input type="hidden" name="sessionID" id="jepSessionID" value="">
+        <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="617473bac80dd30ad4657f5afb7a795ec2abf785">    	<input type="hidden" name="sessionID" id="jepSessionID" value="">
         <div id="formEvent">
             <div id="titleEvent"></div>
             <br>
@@ -1273,7 +1269,7 @@ jQuery.noConflict();    //]]>
         <a href="javascript:hidePopup('joinPrivateEventPopup')" class="butclosepopup" title="Close">X</a>
         <h3 class="popuptitle">Insert Access Code</h3>
         <form class="generalform short" method="post" id="joinPrivateSessionForm" action="">
-            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="7b5c898f7f6b5a19b8f8a15054c2774d30ed7c9f">            <input type="hidden" name="sessionID" id="jpepSessionID" value="">
+            <input type="hidden" name="request_authenticity_token" id="request_authenticity_token" value="617473bac80dd30ad4657f5afb7a795ec2abf785">            <input type="hidden" name="sessionID" id="jpepSessionID" value="">
             <input type="hidden" name="psID" id="jpepPrivateSessionID" value="">
             <div class="col1_2 mright30">
                 <fieldset>
